# block-wasm

./: .gitignore  235.bundle.js  596.bundle.js  622.bundle.js  Cargo.toml  README.md  bundle.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: pages.yml
docs/: 235.bundle.js  532.bundle.js  550.bundle.js  642.bundle.js  95.bundle.js  bundle.js  index.html  pkg_index_js.bundle.js
src/: blocks.rs  board.rs  dom.rs  fns.rs  lib.rs  store.rs  ui.rs
src/blocks/: block.rs  test.rs  (+1 more)
wasm/: Cargo.toml
wasm/pkg/: blocks.d.ts  blocks.js  blocks_bg.js  blocks_bg.wasm  blocks_bg.wasm.d.ts  package.json
wasm/src/: blocks.rs  dom.rs  lib.rs  libs.rs  playground.rs  store.rs  system.rs  table.rs  tools.rs  ui.rs
wasm/src/blocks/: block.rs  blocks.rs  table.rs  test.rs
wasm/src/board/: board.rs  test.rs  values.rs
wasm/src/board/values/: point.rs  size.rs
wasm/src/store/: action_dispacher.rs  actions.rs  create_state.rs  getter.rs  reducer.rs  state.rs  store.rs  test.rs
wasm/src/system/: frame_engine.rs
wasm/src/tools/: frame_engine.rs  store.rs
wasm/src/tools/store/: store.rs  test.rs
wasm/src/ui/: actions.rs  canvas.rs  easing.rs  html.rs  mod.rs  task.rs  test.rs
wasm/src/ui/canvas/: block.rs  block_colors.rs  canvas.rs  field.rs  particle.rs  particles.rs
wasm/src/ui/canvas/particle/: change_particle.rs  delete_particle.rs  fall_particle.rs  particle_core.rs  touch_particle.rs
wasm/src/ui/canvas/particles/: change_particle.rs  delete_particle.rs  fall_particle.rs  touch_particle.rs
wasm/src/util/: mod.rs
(+26 files in other folders)
