[package]
name = "blocks"
version = "0.1.0"
edition = "2021"
authors = ["hrloca<hr.loca@gmail.com>"]
description = "block-wasm"
license = "MIT/Apache-2.0"
repository = "https://github.com/hrloca/block-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = { version = "0.1.6", optional = true }
phf = { version = "0.10", default-features = false }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]

[workspace]
